Fixed bug 1134: UseStringBufferLength: false positives
Fixed bug 1135: CheckResultSet ignores results set declared outside of try/catch
Fixed bug 1136: ECMAScript: NullPointerException in getLeft() and getRight()
Fixed bug 1140: public EcmascriptNode getBody(int index)
Fixed bug 1141: ECMAScript: getFinallyBlock() is buggy.
Fixed bug 1142: ECMAScript: getCatchClause() is buggy.

New EcmaScript rules and ruleset:
	Controversial ruleset, featuring
		- AvoidWithStatement
	UseBaseWithParseInt

New Java rules:
	GuardLogStatement
		- replace xpath implementation of GuardDebugLogging by GuardLogStatement (better perf)
	CommentRequired
		- basic rule to check for existence for formal (javadoc) comments.
	AvoidProtectedMethodInFinalClassNotExtending
		- rule to avoid protected methods in final classes that don't extend anything other than Object.
	ConsecutiveAppendsShouldReuse
		- rule to encourage to reuse StringBuilder.append returned object for consecutive calls.
	PositionLiteralsFirstInCaseInsensitiveComparisons
		- rule similar to PositionLiteralsFirstInComparisons, but for case insensitive comparisons (equalsIgnoreCase).
		  Thanks to Larry Diamond

CPD Command Line Changes:
  Added non-recursive option "--non-recursive" to not scan sub-directories
  Added option "--exclude" to exclude specific files from being scanned (thanks to Delmas for patch #272)

Upgrade to javacc 5.0 (see patch #1109 Patch to build with Javacc 5.0)

API Change - Deprecated APIs:
    net.sourceforge.pmd.lang.ecmascript.ast.ASTFunctionNode: getBody(int index) deprecated, use getBody() instead
    net.sourceforge.pmd.lang.ecmascript.ast.ASTTryStatement: isCatch() and isFinally() deprecated, use hasCatch() and hasBody() instead


August 11, 2013 - 5.0.5:

Fixed bug  991: AvoidSynchronizedAtMethodLevel for static methods
Fixed bug 1084: NPE at UselessStringValueOfRule.java:36
Fixed bug 1091: file extension for fortran seems to be wrong in cpdgui tools