@@ -14,6 +14,7 @@ Fixed bug 1136: ECMAScript: NullPointerException in getLeft() and getRight()
 Fixed bug 1140: public EcmascriptNode getBody(int index)
 Fixed bug 1141: ECMAScript: getFinallyBlock() is buggy.
 Fixed bug 1142: ECMAScript: getCatchClause() is buggy.
+Fixed bug 1144: CPD encoding argument has no effect
 
 New EcmaScript rules and ruleset:
 	Controversial ruleset, featuring
